--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+#/build
 
 # misc
 .DS_Store
@@ -24,3 +24,6 @@ yarn-error.log*
 
 venv
 __pycache__
+
+.databricks
+.env
