--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ databricks-sdk==0.12.0
 werkzeug==3.0.1
 pyyaml==6.0.1
 requests==2.31.0
-flask-cors==4.0.0 
+flask-cors==4.0.0
+databricks-sql-connector==3.1.0 
