--- a/api/data/data_contracts.yaml
+++ b/api/data/data_contracts.yaml
@@ -4,6 +4,9 @@ contracts:
     domain: "customer"
     owner: "Data Governance Team"
     description: "Contract for customer master data"
+    status: "published"
+    created: "2023-10-15T00:00:00Z"
+    updated: "2024-01-05T00:00:00Z"
     validation_rules:
       - "All customer IDs must be unique"
       - "Email addresses must be valid"
@@ -48,6 +51,9 @@ contracts:
     domain: "product"
     owner: "Product Team"
     description: "Contract for product information"
+    status: "published"
+    created: "2023-11-20T00:00:00Z"
+    updated: "2024-02-10T00:00:00Z"
     validation_rules:
       - "All product IDs must be unique"
       - "Prices must be positive"
@@ -84,4 +90,326 @@ contracts:
             record_count: 5000
         lifecycle:
           retention_period: "1 year"
-          update_frequency: "daily" 
+          update_frequency: "daily"
+          
+  - id: "contract1"
+    name: "Customer Analytics Data Contract"
+    description: "Data contract between Customer 360 and Marketing Analytics"
+    status: "active"
+    version: "1.0"
+    created: "2024-01-20T00:00:00Z"
+    updated: "2024-02-05T00:00:00Z"
+    producer:
+      id: "product1"
+      name: "Customer 360"
+      team: "Customer Analytics Team"
+    consumer:
+      id: "team1"
+      name: "Marketing Analytics Team"
+      contact: "marketing-analytics@example.com"
+    data_sharing:
+      method: "database"
+      location: "s3://data-products/customer/profile"
+      format: "parquet"
+      frequency: "daily"
+    schema:
+      - name: "customer_id"
+        type: "string"
+        description: "Unique customer identifier"
+        required: true
+      - name: "full_name"
+        type: "string"
+        description: "Customer's full name"
+        required: true
+      - name: "email"
+        type: "string"
+        description: "Primary email address"
+        required: true
+      - name: "lifetime_value"
+        type: "decimal"
+        description: "Customer lifetime value"
+        required: false
+    sla:
+      availability: "99.9%"
+      freshness: "24 hours"
+      latency: "< 5 minutes"
+      
+  - id: "contract2"
+    name: "Product Recommendation API Contract"
+    description: "Data contract for the product recommendation service"
+    status: "deprecated"
+    version: "1.1"
+    created: "2023-08-30T00:00:00Z"
+    updated: "2024-03-15T00:00:00Z"
+    producer:
+      id: "product3"
+      name: "Product Recommendations"
+      team: "Data Science Team"
+    consumer:
+      id: "team2"
+      name: "E-commerce Team"
+      contact: "ecommerce@example.com"
+    data_sharing:
+      method: "api"
+      location: "https://api.example.com/recommendations"
+      format: "json"
+      frequency: "real-time"
+    schema:
+      - name: "customer_id"
+        type: "string"
+        description: "Customer identifier"
+        required: true
+      - name: "recommended_products"
+        type: "array"
+        description: "List of recommended product IDs"
+        required: true
+      - name: "confidence_score"
+        type: "float"
+        description: "Confidence score for recommendations"
+        required: true
+    sla:
+      availability: "99.99%"
+      freshness: "real-time"
+      latency: "< 200ms"
+      
+  - id: "contract3"
+    name: "Sales Data Integration Contract"
+    description: "Contract for sharing sales transaction data with Finance"
+    status: "draft"
+    version: "2.0"
+    created: "2024-03-01T00:00:00Z"
+    updated: "2024-03-01T00:00:00Z"
+    producer:
+      id: "product2"
+      name: "Sales Analytics"
+      team: "Sales Operations"
+    consumer:
+      id: "team3"
+      name: "Financial Planning Team"
+      contact: "finance-planning@example.com"
+    data_sharing:
+      method: "database"
+      location: "s3://data-products/sales/transactions"
+      format: "delta"
+      frequency: "hourly"
+    schema:
+      - name: "transaction_id"
+        type: "string"
+        description: "Unique transaction identifier"
+        required: true
+      - name: "customer_id"
+        type: "string"
+        description: "Customer identifier"
+        required: true
+      - name: "product_id"
+        type: "string"
+        description: "Product identifier"
+        required: true
+      - name: "amount"
+        type: "decimal"
+        description: "Transaction amount"
+        required: true
+      - name: "timestamp"
+        type: "timestamp"
+        description: "Transaction timestamp"
+        required: true
+    sla:
+      availability: "99.95%"
+      freshness: "1 hour"
+      latency: "< 10 minutes"
+      
+  - id: "contract4"
+    name: "Supply Chain Metrics Contract"
+    description: "Contract for sharing supply chain metrics with Operations"
+    status: "archived"
+    version: "1.0"
+    created: "2023-05-10T00:00:00Z"
+    updated: "2023-12-05T00:00:00Z"
+    producer:
+      id: "product4"
+      name: "Supply Chain Analytics"
+      team: "Supply Chain Team"
+    consumer:
+      id: "team4"
+      name: "Operations Management"
+      contact: "operations@example.com"
+    data_sharing:
+      method: "database"
+      location: "s3://data-products/supply-chain/metrics"
+      format: "csv"
+      frequency: "daily"
+    schema:
+      - name: "metric_id"
+        type: "string"
+        description: "Metric identifier"
+        required: true
+      - name: "metric_name"
+        type: "string"
+        description: "Name of the metric"
+        required: true
+      - name: "value"
+        type: "float"
+        description: "Metric value"
+        required: true
+      - name: "timestamp"
+        type: "timestamp"
+        description: "Measurement timestamp"
+        required: true
+      - name: "location_id"
+        type: "string"
+        description: "Facility location identifier"
+        required: true
+    sla:
+      availability: "99.5%"
+      freshness: "24 hours"
+      latency: "< 30 minutes"
+      
+  - id: "contract5"
+    name: "Customer Churn Prediction Contract"
+    description: "Contract for sharing churn prediction data with Customer Success"
+    status: "in-development"
+    version: "0.5"
+    created: "2024-02-15T00:00:00Z"
+    updated: "2024-03-10T00:00:00Z"
+    producer:
+      id: "product5"
+      name: "Customer Churn Model"
+      team: "Data Science Team"
+    consumer:
+      id: "team5"
+      name: "Customer Success Team"
+      contact: "customer-success@example.com"
+    data_sharing:
+      method: "api"
+      location: "https://api.example.com/churn-predictions"
+      format: "protobuf"
+      frequency: "daily"
+    schema:
+      - name: "customer_id"
+        type: "string"
+        description: "Customer identifier"
+        required: true
+      - name: "churn_probability"
+        type: "float"
+        description: "Probability of customer churning"
+        required: true
+      - name: "risk_factors"
+        type: "array"
+        description: "List of risk factors contributing to churn"
+        required: false
+      - name: "recommended_actions"
+        type: "array"
+        description: "Recommended retention actions"
+        required: false
+    sla:
+      availability: "99.0%"
+      freshness: "24 hours"
+      latency: "< 1 minute"
+      
+  - id: "contract6"
+    name: "Marketing Campaign Performance Contract"
+    description: "Contract for sharing marketing campaign performance data"
+    status: "published"
+    version: "1.2"
+    created: "2023-09-20T00:00:00Z"
+    updated: "2024-01-15T00:00:00Z"
+    producer:
+      id: "product6"
+      name: "Marketing Analytics"
+      team: "Marketing Team"
+    consumer:
+      id: "team6"
+      name: "Executive Leadership"
+      contact: "executives@example.com"
+    data_sharing:
+      method: "dashboard"
+      location: "https://dashboards.example.com/marketing-performance"
+      format: "tableau"
+      frequency: "daily"
+    schema:
+      - name: "campaign_id"
+        type: "string"
+        description: "Campaign identifier"
+        required: true
+      - name: "campaign_name"
+        type: "string"
+        description: "Campaign name"
+        required: true
+      - name: "channel"
+        type: "string"
+        description: "Marketing channel"
+        required: true
+      - name: "impressions"
+        type: "integer"
+        description: "Number of impressions"
+        required: true
+      - name: "clicks"
+        type: "integer"
+        description: "Number of clicks"
+        required: true
+      - name: "conversions"
+        type: "integer"
+        description: "Number of conversions"
+        required: true
+      - name: "spend"
+        type: "decimal"
+        description: "Campaign spend"
+        required: true
+      - name: "roi"
+        type: "float"
+        description: "Return on investment"
+        required: true
+    sla:
+      availability: "99.5%"
+      freshness: "24 hours"
+      latency: "< 15 minutes"
+      
+  - id: "contract7"
+    name: "IoT Sensor Data Contract"
+    description: "Contract for sharing IoT sensor data with Manufacturing"
+    status: "active"
+    version: "1.0"
+    created: "2023-11-25T00:00:00Z"
+    updated: "2024-02-20T00:00:00Z"
+    producer:
+      id: "product7"
+      name: "IoT Sensor Data"
+      team: "IoT Team"
+    consumer:
+      id: "team7"
+      name: "Manufacturing Team"
+      contact: "manufacturing@example.com"
+    data_sharing:
+      method: "streaming"
+      location: "kafka://iot-cluster:9092/sensor-data"
+      format: "avro"
+      frequency: "real-time"
+    schema:
+      - name: "device_id"
+        type: "string"
+        description: "Device identifier"
+        required: true
+      - name: "sensor_type"
+        type: "string"
+        description: "Type of sensor"
+        required: true
+      - name: "reading"
+        type: "float"
+        description: "Sensor reading value"
+        required: true
+      - name: "unit"
+        type: "string"
+        description: "Unit of measurement"
+        required: true
+      - name: "timestamp"
+        type: "timestamp"
+        description: "Reading timestamp"
+        required: true
+      - name: "location"
+        type: "object"
+        description: "Sensor location coordinates"
+        required: false
+    sla:
+      availability: "99.99%"
+      freshness: "real-time"
+      latency: "< 500ms" 
