--- a/api/data/entitlements.yaml
+++ b/api/data/entitlements.yaml
@@ -2,6 +2,10 @@ personas:
   - id: "1a2b3c4d-5e6f-7g8h-9i0j-1k2l3m4n5o6p"
     name: "Data Analyst"
     description: "Standard data analyst with read access to common datasets"
+    groups:
+      - "business_analysts"
+      - "reporting_team"
+      - "analytics_users"
     created_at: "2023-06-15T10:30:00Z"
     updated_at: "2023-06-15T10:30:00Z"
     privileges:
@@ -18,6 +22,10 @@ personas:
   - id: "2b3c4d5e-6f7g-8h9i-0j1k-2l3m4n5o6p7q"
     name: "Data Engineer"
     description: "Data engineer with write access to data pipelines"
+    groups:
+      - "data_engineering"
+      - "etl_team"
+      - "pipeline_operators"
     created_at: "2023-06-15T11:15:00Z"
     updated_at: "2023-07-20T14:45:00Z"
     privileges:
@@ -34,6 +42,10 @@ personas:
   - id: "3c4d5e6f-7g8h-9i0j-1k2l-3m4n5o6p7q8r"
     name: "Data Steward"
     description: "Data governance role with management permissions"
+    groups:
+      - "data_governance"
+      - "data_stewards"
+      - "compliance_team"
     created_at: "2023-06-15T12:00:00Z"
     updated_at: "2023-08-10T09:30:00Z"
     privileges:
@@ -44,6 +56,9 @@ personas:
   - id: "4d5e6f7g-8h9i-0j1k-2l3m-4n5o6p7q8r9s"
     name: "Business User"
     description: "Business user with limited read access to specific dashboards and reports"
+    groups:
+      - "business_users"
+      - "report_viewers"
     created_at: "2023-07-01T09:00:00Z"
     updated_at: "2023-07-01T09:00:00Z"
     privileges:
@@ -57,6 +72,10 @@ personas:
   - id: "5e6f7g8h-9i0j-1k2l-3m4n-5o6p7q8r9s0t"
     name: "Data Scientist"
     description: "Data scientist with access to machine learning features and models"
+    groups:
+      - "data_science_team"
+      - "ml_engineers"
+      - "model_developers"
     created_at: "2023-07-15T14:30:00Z"
     updated_at: "2023-09-05T11:20:00Z"
     privileges:
