--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-sparklines": "^1.7.0",
     "reactflow": "^11.11.4",
     "styled-components": "^6.1.15",
     "typescript": "^4.9.5",
@@ -58,6 +59,7 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "@types/react-sparklines": "^1.7.5",
     "@types/styled-components": "^5.1.34"
   }
 }
