--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,9 @@ dependencies = [
     "typing-extensions>=4.9.0",
     "werkzeug>=3.0.1",
     "pyyaml>=6.0.1",
-    "requests>=2.31.0"
+    "requests>=2.31.0",
+    "pydantic-settings>=2.2.1",
+    "GitPython>=3.1.44"
 ]
 
 [tool.hatch.build.targets.wheel]
