--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,6 @@ six>=1.16.0
 typing-extensions>=4.9.0
 werkzeug>=3.0.1
 pyyaml>=6.0.1
-requests>=2.31.0 
+requests>=2.31.0
+pydantic-settings>=2.2.1
+GitPython>=3.1.44
