--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,20 +53,16 @@ dependencies = [
 [tool.hatch.metadata]
 allow-direct-references = true
 
-[tool.hatch.build.hooks.custom]
-path = "build.py"
-
 [tool.hatch.build.targets.sdist]
 include = [
     "/api",
-    "/build.py",
     "/pyproject.toml",
     "/README.md",
 ]
 
 [tool.hatch.envs.dev.scripts]
 dev-frontend = "yarn dev:frontend"
-build-frontend = "yarn build:frontend"
+build-frontend = "yarn build:frontend && python scripts/copy_static.py"
 dev-backend = "uvicorn api.app:app --reload --host=0.0.0.0 --port=8000"
 deploy-and-run = [
   'databricks bundle deploy --var="catalog=app_data" --var="schema=app_ucsak"',
