--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-dropzone": "^5.1.0",
+    "@types/react-sparklines": "^1.7.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -35,7 +37,9 @@
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-router-dom": "^6.22.0",
+    "react-sparklines": "^1.7.0",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.1.0",
