Fixed compliance and estate data loading issues. Added estates to commander.

--- a/static/.vite/manifest.json
+++ b/static/.vite/manifest.json
@@ -4,7 +4,7 @@
     "name": "vendor"
   },
   "index.html": {
-    "file": "index-DzpABGq8.js",
+    "file": "index-D8LqfoXl.js",
     "name": "index",
     "src": "index.html",
     "isEntry": true,
