--- a/static/.vite/manifest.json
+++ b/static/.vite/manifest.json
@@ -4,7 +4,7 @@
     "name": "vendor"
   },
   "index.html": {
-    "file": "index-D8LqfoXl.js",
+    "file": "index-D9B7DOPV.js",
     "name": "index",
     "src": "index.html",
     "isEntry": true,
@@ -12,7 +12,7 @@
       "_vendor-BbMx8q9L.js"
     ],
     "css": [
-      "index-BzfsUW29.css"
+      "index-BjDxJJkZ.css"
     ]
   }
 }
