Update FE code again

--- a/static/.vite/manifest.json
+++ b/static/.vite/manifest.json
@@ -4,7 +4,7 @@
     "name": "vendor"
   },
   "index.html": {
-    "file": "index-ZsHciF8d.js",
+    "file": "index-Fo2Z1Sof.js",
     "name": "index",
     "src": "index.html",
     "isEntry": true,
