--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ pyyaml>=6.0.1
 requests>=2.31.0
 pydantic-settings>=2.2.1
 GitPython>=3.1.44
+pyarrow>=15.0.0
+sqlalchemy>=1.4,<2.1
+databricks-sqlalchemy>=0.1.0
+pydantic>=1.8,<2.8
+alembic>=1.11.1
