Added license file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "Unified Catalog Application"
 authors = [
     { name="larsgeorge", email="lars.george@gmail.com" }
 ]
+license = "Apache-2.0"
 requires-python = ">=3.10,<3.13"
 dynamic = ["dependencies"]
 
