Added asset review feature

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-dropzone": "^5.1.0",
     "@types/react-sparklines": "^1.7.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "class-variance-authority": "^0.7.1",
@@ -49,6 +50,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.0",
     "react-sparklines": "^1.7.0",
+    "react-syntax-highlighter": "^15.6.1",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.1.0",
