--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,11 @@ typing-extensions>=4.9.0
 werkzeug>=3.0.1
 pyyaml>=6.0.1
 requests>=2.31.0
-pydantic-settings>=2.2.1
 GitPython>=3.1.44
 pyarrow>=15.0.0
-sqlalchemy>=1.4,<2.1
 databricks-sqlalchemy>=0.1.0
 pydantic>=1.8,<2.8
+pydantic[email]>=1.8,<2.8
+pydantic-settings>=2.2.1
+sqlalchemy>=1.4,<2.1
 alembic>=1.11.1
