--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "yarn": "^1.22.22",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
